Added Sections part, based on the previous examples
