# SwaggerDocSrc/src/IO.Swagger/wwwroot/swagger-original.json
@@ -194,6 +194,33 @@
       }
     },
     "/api/v1/Project/project/{projectId}" : {
+      "delete" : {
+        "tags" : [ "Projects" ],
+        "description" : "Delete the project, going by projectId (soft delete)",
+        "parameters" : [ {
+          "name" : "projectId",
+          "in" : "path",
+          "required" : true,
+          "style" : "simple",
+          "explode" : false,
+          "schema" : {
+            "type" : "number",
+            "format" : "int32"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Success",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Response"
+                }
+              }
+            }
+          }
+        }
+      },
       "patch" : {
         "tags" : [ "Projects" ],
         "description" : "Modify the project information including name, description",
@@ -230,6 +257,128 @@
           }
         }
       }
+    },
+    "/api/v1/Section/{projectId}/sections" : {
+      "get" : {
+        "tags" : [ "Sections" ],
+        "description" : "Get all sections of a project, by projectId",
+        "parameters" : [ {
+          "name" : "projectId",
+          "in" : "path",
+          "required" : true,
+          "style" : "simple",
+          "explode" : false,
+          "schema" : {
+            "type" : "number",
+            "format" : "int32"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Success",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Response"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/Section/section" : {
+      "post" : {
+        "tags" : [ "Sections" ],
+        "description" : "Add a new section",
+        "operationId" : "addSection",
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/NewSectionModel"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "Success",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Response"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/Section/section/{sectionId}" : {
+      "delete" : {
+        "tags" : [ "Sections" ],
+        "operationId" : "Delete section",
+        "parameters" : [ {
+          "name" : "sectionId",
+          "in" : "path",
+          "required" : true,
+          "style" : "simple",
+          "explode" : false,
+          "schema" : {
+            "type" : "number",
+            "format" : "int32"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Success",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Response"
+                }
+              }
+            }
+          }
+        }
+      },
+      "patch" : {
+        "tags" : [ "Sections" ],
+        "operationId" : "Modify section (name)",
+        "parameters" : [ {
+          "name" : "sectionId",
+          "in" : "path",
+          "required" : true,
+          "style" : "simple",
+          "explode" : false,
+          "schema" : {
+            "type" : "number",
+            "format" : "int32"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/UpdatedInfoSectionModel"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "Success",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Response"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components" : {
@@ -241,7 +390,7 @@
           "name" : {
             "type" : "string"
           },
-          "desctiption" : {
+          "description" : {
             "type" : "string"
           },
           "createdBy" : {
@@ -256,11 +405,42 @@
           "name" : {
             "type" : "string"
           },
-          "desctiption" : {
+          "description" : {
             "type" : "string"
           },
           "deleted" : {
             "type" : "boolean"
+          }
+        }
+      },
+      "NewSectionModel" : {
+        "required" : [ "createdBy", "name", "project" ],
+        "type" : "object",
+        "properties" : {
+          "name" : {
+            "type" : "string",
+            "example" : "Section name"
+          },
+          "project" : {
+            "type" : "number",
+            "format" : "int 32"
+          },
+          "createdBy" : {
+            "type" : "number",
+            "format" : "int 32"
+          }
+        }
+      },
+      "UpdatedInfoSectionModel" : {
+        "type" : "object",
+        "properties" : {
+          "name" : {
+            "type" : "string",
+            "example" : "This is a new section name"
+          },
+          "deleted" : {
+            "type" : "boolean",
+            "example" : false
           }
         }
       },
